[package]
name = "stopwatch-rs"
version = "0.1.0"
edition = "2021"
authors = ["Ruan G. Molinari"]
description = "A stopwatch library to observe the time a block of code takes to execute."
repository = "https://github.com/ruan-molinari/stopwatch-rs"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "time" ] }
